--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Hon <dennis.mejen@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
